# KAE

./: .gitignore  .travis.yml  0001-Update-version-number.patch  Makefile  README.md  ReleaseNote  build.sh  engine_kae.c  kae.spec
KAEKernelDriver/: Makefile
KAEKernelDriver-OLK-6.6/hisilicon/: Makefile  debugfs.c  hisi_acc_qm.h  qm.c  sgl.c
KAEKernelDriver-OLK-6.6/include_linux/: uacce.h
KAEKernelDriver-OLK-6.6/uacce/: uacce.c
KAEKernelDriver/conf/: hisi_hpre.conf  hisi_sec2.conf  hisi_zip.conf
KAEKernelDriver/hisilicon/: Makefile  debugfs.c  hisi_acc_qm.h  hisi_qm.h  qm.c  qm_common.h  sgl.c
KAEKernelDriver/include_linux/: uacce.h
KAEKernelDriver/uacce/: uacce.c
KAEOpensslEngine/: .gitignore  Makefile.am  README.md  configure.ac
KAEOpensslEngine/docs/: ReleaseNotes.md  maintenance.md
KAEOpensslEngine/src/: Makefile.am  e_uadk.c
KAEOpensslEngine/src/utils/: engine_config.h  engine_log.c  engine_log.h  engine_utils.c
KAEOpensslEngine/src/v1/: uadk_v1.h
KAEOpensslEngine/src/v1/alg/ciphers/: sec_ciphers.c  sec_ciphers.h  sec_ciphers_aead.c  sec_ciphers_aead.h  sec_ciphers_soft.c  sec_ciphers_soft.h  sec_ciphers_utils.c  sec_ciphers_utils.h  sec_ciphers_wd.c  sec_ciphers_wd.h
KAEOpensslEngine/src/v1/alg/ciphers/sw/: arm_arch.h
KAEOpensslEngine/src/v1/alg/dh/: hpre_dh.c  hpre_dh_soft.c  hpre_dh_wd.c  hpre_dh_wd.h
KAEOpensslEngine/src/v1/alg/digests/: sec_digests.c  sec_digests.h  sec_digests_soft.c  sec_digests_soft.h  sec_digests_wd.c
KAEOpensslEngine/src/v1/alg/pkey/: hpre_rsa.c  hpre_rsa_soft.c  hpre_rsa_soft.h  hpre_rsa_utils.c  hpre_sm2.c  hpre_sm2.h
KAEOpensslEngine/src/v1/async/: async_callback.c  async_event.c  async_poll.c  async_task_queue.c  async_task_queue.h
KAEOpensslEngine/src/v1/utils/: engine_check.c  engine_fork.c  engine_fork.h  engine_opensslerr.c  engine_opensslerr.h
KAEOpensslEngine/src/v1/wdmngr/: wd_alg_queue.c  wd_queue_memory.c  wd_queue_memory.h
KAEOpensslEngine/src/v2/: uadk.h
KAEOpensslEngine/src/v2/alg/ciphers/: uadk_aead.c  uadk_cipher.c  uadk_cipher_adapter.c  uadk_cipher_adapter.h
KAEOpensslEngine/src/v2/alg/dh/: uadk_dh.c
KAEOpensslEngine/src/v2/alg/digest/: uadk_digest.c
KAEOpensslEngine/src/v2/alg/pkey/: uadk_ec.c  uadk_ecx.c  uadk_pkey.c  uadk_pkey.h  uadk_sm2.c
KAEOpensslEngine/src/v2/alg/rsa/: uadk_rsa.c
KAEOpensslEngine/src/v2/async/: uadk_async.c  uadk_async.h
KAEOpensslEngine/test/: sanity_test.sh
KAEOpensslEngine/test/dhparamslist/: DH_sync_fun.sh  g2_10000.pem  g2_1024.pem  g2_1536.pem  g2_2048.pem  g2_3072.pem  g2_4096.pem  g2_768.pem
KAEOpensslEngine/test/func_test/: build.sh
KAEOpensslEngine/test/func_test/src/: Makefile  build.sh  test_dh.cpp  test_rsa_queue.cpp  test_sm3_queue.cpp  test_sm4_queue.cpp  testsuit_aes.cpp  testsuit_cihper.cpp  testsuit_digest.cpp  testsuit_sm3_digest.cpp
KAEOpensslEngine/test/func_test/src/speed/: Makefile  dh_speed.c  md5_speed.c
KAEOpensslEngine/test/gtest-download/: download.sh  download.xml
KAEOpensslEngine/test/perf_test/: openssl_perf.sh  performance.sh  rsa_async_long_multi_sec.sh  rsa_long_multi_sec.sh
KAEOpensslEngine/test/sm2_fun/: makefile  sm2_function_test.c
KAEOpensslEngine/test/sm2_perf/: makefile  sm2_internal_test.c
KAEOpensslEngine/test/sm2_test/: makefile  sm2_test.cpp
KAEOpensslEngine/test/sm4_testcase/: makefile  sm4_demo.c
KAEZlib/: Makefile  setup.sh
KAEZlib/gtest/: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
KAEZlib/include/: kaezip.h
KAEZlib/patch/: kaezip_for_sec_CVE-2018-25032.patch  kaezip_for_sec_CVE-2022-37434.patch  kaezip_for_zlib-1.2.11.patch
KAEZlib/perf_tool/: kaezip_perf.sh  kaezip_tool.c  makefile
KAEZlib/src/: kaezip_adapter.c  kaezip_adapter.h
KAEZlib/test/: kaezip_perf.c  kaezip_perf_realdata.c  makefile
KAEZlib/test/gtest/: CMakeLists.txt  main.cpp
KAEZstd/: Makefile  build.sh
KAEZstd/cli_test/: cli_zstd_test.sh  cli_zstd_test_examples.sh
KAEZstd/gtest/: CMakeLists.txt  common.h
KAEZstd/include/: kaezstd.h
KAEZstd/open_source/: kaezstd_1_5_2.patch
KAEZstd/perftest/: common.h  kaezstd_perf.c
KAEZstd/src/: kaezstd_adapter.c  kaezstd_adapter.h  kaezstd_common.h  kaezstd_compress.c  kaezstd_config.c  kaezstd_config.h  kaezstd_log.c  kaezstd_log.h
alg/ciphers/: sec_ciphers.c  sec_ciphers.h  sec_ciphers_soft.c  sec_ciphers_utils.c  sec_ciphers_utils.h  sec_ciphers_wd.c  sec_ciphers_wd.h
alg/dh/: hpre_dh.c  hpre_dh_util.h  hpre_dh_wd.c  hpre_dh_wd.h
alg/digests/: sec_digests.c  sec_digests.h  sec_digests_soft.c  sec_digests_wd.c  sec_digests_wd.h
alg/pkey/: hpre_rsa.c  hpre_rsa.h  hpre_rsa_soft.h  hpre_rsa_utils.c  hpre_rsa_utils.h  hpre_wd.c  hpre_wd.h
async/: async_callback.c  async_callback.h  async_event.h  async_poll.c  async_poll.h  async_task_queue.c  async_task_queue.h
kae_driver/: Makefile  README.md
kae_driver/hisilicon/: hisi_acc_qm.h  qm.c
kae_driver/kae_driver/: .cache.mk  Makefile  README.md  kae_driver.spec
kae_driver/uacce/: Kconfig  uacce.c
kae_driver/warpdrive/: Makefile  Makefile.am  Makefile.in  README.md  cleanup.sh  conf.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  libwd.spec  module.mk  wd_cipher.c  wd_digest.c
kae_engine/: Makefile  README.md  ReleaseNote  configure  configure.ac  engine_kae.c  engine_kae.h
kae_engine/async/: async_event.c  async_poll.h
kae_engine/docs/: ReleaseNotes.md  maintenance.md
kae_engine/src/: Makefile.am  e_uadk.c  uadk_async.c  uadk_async.h  uadk_cipher.c  uadk_dh.c  uadk_digest.c  uadk_ec.c  uadk_ecx.c  uadk_pkey.c  uadk_pkey.h  uadk_rsa.c  uadk_sm2.c  uadk_utils.c  uadk_utils.h
kae_engine/test/: sanity_test.sh
kae_engine/utils/: engine_check.c  engine_fork.c  engine_log.c  (+5 more)
kae_zip_engine/: Makefile  README.md  kaezip.spec  setup.sh
kae_zstd/: Makefile
scripts/: README.md  openssl.cnf
test/: build.sh
uadk/: Makefile.am  conf.sh  wd_dh.c  wd_rsa.c
utils/: engine_check.c  engine_check.h  engine_config.c  engine_config.h  engine_fork.c  engine_log.c  engine_log.h  engine_utils.c  engine_utils.h
wdmngr/: wd_queue_memory.c  wd_queue_memory.h
(+333 files in other folders)
